fixed text-anim-top-visible

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -92,41 +92,9 @@ h1,h2 { font-weight: normal;}
 .text-anim-top-visible {
   width: 100%;
   color: #fff;
-  -webkit-clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 80%);
-  clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 80%);
   transform: translateY(-50px);
   opacity: 0;
-  animation-name: animation-top-visible;
-  animation-timing-function: ease;
-  animation-duration: 3s;
-  animation-delay: 0.6s;
-  -webkit-animation-fill-mode: forwards;
-}
-@keyframes animation-top-visible {
-  0% {
-    transform: translateY(-50px);
-    opacity: 0;
-    -webkit-clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 80%);
-    clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 80%);
-  }
-  20% {
-    transform: translateY(0);
-    opacity: 1;
-    -webkit-clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 15%);
-    clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 15%);
-  }
-  80% {
-    transform: translateY(0);
-    opacity: 1;
-    -webkit-clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 15%);
-    clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 15%);
-  }
-  100% {
-    transform: translateY(0);
-    opacity: 1;
-    -webkit-clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 15%);
-    clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 15%);
-  }
+  animation: animation-top-visible 3s 0.6s ease forwards;
 }
 .text-size-16 {
   font-size: 16px;
@@ -306,6 +274,16 @@ h1,h2 { font-weight: normal;}
   }
   100%{
       transform: translateX(2px);
+  }
+}
+@keyframes animation-top-visible {
+  0% {
+    transform: translateY(-50px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
   }
 }
 .arrow {
